# ia-multi-agents-crewai

./: .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  crew.py  main.py  pyproject.toml  requirements.txt
config/: agents.yaml  tasks.yaml
output/: revisor_task.md
